--- a/BulkyBook.DataAccess/BulkyBook.DataAccess.csproj
+++ b/BulkyBook.DataAccess/BulkyBook.DataAccess.csproj
@@ -15,4 +15,9 @@
     <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BulkyBook.Models\BulkyBook.Models.csproj" />
+    <ProjectReference Include="..\BulkyBook.Utility\BulkyBook.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
