Create db migration for default identity and also create a dropdwon in the nav bar

--- a/BulkyBook/appsettings.json
+++ b/BulkyBook/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BulkyBook-32D52FAD-665D-415E-8866-20DAB24BCEC7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=ZYMERGASHI;Database=BulkyBook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
